--- a/api-test/src/main/resources/masterdata/DeleteDocumentType/deleteDocumentType.yml
+++ b/api-test/src/main/resources/masterdata/DeleteDocumentType/deleteDocumentType.yml
@@ -5,6 +5,7 @@ DeleteDocumentType:
       description: Delete Document Type with valid data
       role: admin
       restMethod: delete
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/DeleteDocumentType/deleteDocumentType
       outputTemplate: masterdata/DeleteDocumentType/deleteDocumentTypeResult
       input: '{
@@ -19,6 +20,7 @@ DeleteDocumentType:
       description: Delete Document Type with invalid code
       role: admin
       restMethod: delete
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/DeleteDocumentType/deleteDocumentType
       outputTemplate: masterdata/error
       input: '{
