--- a/api-test/src/main/resources/masterdata/DeviceSearch/DeviceSearch.yml
+++ b/api-test/src/main/resources/masterdata/DeviceSearch/DeviceSearch.yml
@@ -6,6 +6,7 @@ DeviceSearch:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/DeviceSearch/deviceSearch
       outputTemplate: masterdata/DeviceSearch/deviceSearchResult
       input: '{
@@ -50,6 +51,7 @@ DeviceSearch:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/DeviceSearch/deviceSearch
       outputTemplate: masterdata/DeviceSearch/deviceSearchResult
       input: '{
@@ -94,6 +96,7 @@ DeviceSearch:
       checkErrorsOnlyInResponse: true
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/DeviceSearch/deviceSearch
       outputTemplate: masterdata/DeviceSearch/deviceSearchResult
       input: '{
@@ -126,6 +129,7 @@ DeviceSearch:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/DeviceSearch/deviceSearch
       outputTemplate: masterdata/DeviceSearch/deviceSearchResult
       input: '{
@@ -171,6 +175,7 @@ DeviceSearch:
       role: globalAdmin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/DeviceSearch/deviceSearch
       outputTemplate: masterdata/DeviceSearch/deviceSearchResult
       input: '{
@@ -216,6 +221,7 @@ DeviceSearch:
       role: globalAdmin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/DeviceSearch/deviceSearch
       outputTemplate: masterdata/NilSearchResult
       input: '{
@@ -251,6 +257,7 @@ DeviceSearch:
       role: globalAdmin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/DeviceSearch/deviceSearch
       outputTemplate: masterdata/error
       input: '{
@@ -289,6 +296,7 @@ DeviceSearch:
       role: globalAdmin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/DeviceSearch/deviceSearch
       outputTemplate: masterdata/error
       input: '{
