--- a/api-test/src/main/resources/masterdata/DeviceTypeSearch/DeviceTypeSearch.yml
+++ b/api-test/src/main/resources/masterdata/DeviceTypeSearch/DeviceTypeSearch.yml
@@ -6,6 +6,7 @@ DeviceTypeSearch:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearch
       outputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearchResult
       input: '{
@@ -49,6 +50,7 @@ DeviceTypeSearch:
       checkErrorsOnlyInResponse: true
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearch
       outputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearchResult
       input: '{
@@ -89,6 +91,7 @@ DeviceTypeSearch:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearch
       outputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearchResult
       input: '{
@@ -132,6 +135,7 @@ DeviceTypeSearch:
       checkErrorsOnlyInResponse: true
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearch
       outputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearchResult
       input: '{
@@ -165,6 +169,7 @@ DeviceTypeSearch:
       checkErrorsOnlyInResponse: true
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearch
       outputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearchResult
       input: '{
@@ -197,6 +202,7 @@ DeviceTypeSearch:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeSearch/deviceTypeSearch
       outputTemplate: masterdata/error
       input: '{
