--- a/api-test/src/main/resources/masterdata/DocumentType/UpdateDocumentType.yml
+++ b/api-test/src/main/resources/masterdata/DocumentType/UpdateDocumentType.yml
@@ -6,6 +6,7 @@ UpdateDocumentType:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+	  additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/DocumentType/documentType
       outputTemplate: masterdata/DocumentType/documentTypeResult
       input: '{
@@ -30,6 +31,7 @@ UpdateDocumentType:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+	  additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/DocumentType/documentType
       outputTemplate: masterdata/error
       input: '{
@@ -55,6 +57,7 @@ UpdateDocumentType:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+	  additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/DocumentType/documentType
       outputTemplate: masterdata/error
       input: '{
@@ -79,6 +82,7 @@ UpdateDocumentType:
       description: Update Document Type with invalid Description more than 128 characters
       role: admin
       restMethod: put
+	  additionalDependencies: TC_Masterdata_CreateDocumentType_01
       templateFields: ["name","description"]
       inputTemplate: masterdata/DocumentType/documentType
       outputTemplate: masterdata/error
@@ -106,6 +110,7 @@ UpdateDocumentType:
       role: admin
       templateFields: ["description"]
       restMethod: put
+	  additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/DocumentType/documentType
       outputTemplate: masterdata/error
       input: '{
@@ -131,6 +136,7 @@ UpdateDocumentType:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+	  additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/DocumentType/documentType
       outputTemplate: masterdata/error
       input: '{
