--- a/api-test/src/main/resources/masterdata/FetchDevice/FetchDevice.yml
+++ b/api-test/src/main/resources/masterdata/FetchDevice/FetchDevice.yml
@@ -6,6 +6,7 @@ FetchDevice:
       role: admin
       templateFields: ["name","description"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/FetchDevice/fetchDevice
       outputTemplate: masterdata/FetchDevice/fetchDeviceResult
       input: '{
@@ -25,6 +26,7 @@ FetchDevice:
       role: admin
       templateFields: ["name","description"]
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/FetchDevice/fetchDevice
       outputTemplate: masterdata/FetchDevice/fetchDeviceResult
       input: '{
@@ -44,6 +46,7 @@ FetchDevice:
       role: admin
       checkErrorsOnlyInResponse: true
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/FetchDevice/fetchDevice
       outputTemplate: masterdata/FetchDevice/fetchDeviceByCenterResult
       input: '{
@@ -62,6 +65,7 @@ FetchDevice:
       description: Retrieve mapped Device details to a regCenterId
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/FetchDevice/fetchDevice
       outputTemplate: masterdata/error
       input: '{
@@ -83,6 +87,7 @@ FetchDevice:
       description: Retrieve Device details non existing deviceType
       role: admin
       restMethod: get
+      additionalDependencies: TC_Masterdata_CreateDevice_01
       inputTemplate: masterdata/FetchDevice/fetchDevice
       outputTemplate: masterdata/error
       input: '{
