--- a/api-test/src/main/resources/masterdata/FilterRegCenterType/FilterRegCenterType.yml
+++ b/api-test/src/main/resources/masterdata/FilterRegCenterType/FilterRegCenterType.yml
@@ -7,6 +7,7 @@ FilterRegCenterType:
       checkErrorsOnlyInResponse: true
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/FilterRegCenterType/filterRegCenterTypeResult
       input: '{
@@ -28,6 +29,7 @@ FilterRegCenterType:
       checkErrorsOnlyInResponse: true
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/FilterRegCenterType/filterRegCenterTypeResult
       input: '{
@@ -48,6 +50,7 @@ FilterRegCenterType:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/FilterRegCenterType/filterRegCenterTypeResult
       input: '{
@@ -80,6 +83,7 @@ FilterRegCenterType:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/FilterRegCenterType/filterRegCenterTypeResult
       input: '{
@@ -113,6 +117,7 @@ FilterRegCenterType:
       checkErrorsOnlyInResponse: true
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/NilFilterResult
       input: '{
@@ -134,6 +139,7 @@ FilterRegCenterType:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/error
       input: '{
@@ -160,6 +166,7 @@ FilterRegCenterType:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/error
       input: '{
@@ -187,6 +194,7 @@ FilterRegCenterType:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/error
       input: '{
@@ -213,6 +221,7 @@ FilterRegCenterType:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/error
       input: '{
@@ -238,6 +247,7 @@ FilterRegCenterType:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateRegCenterType_01
       inputTemplate: masterdata/FilterRegCenterType/filterRegCenterType
       outputTemplate: masterdata/error
       input: '{
