--- a/api-test/src/main/resources/masterdata/SearchDocumentType/SearchDocumentType.yml
+++ b/api-test/src/main/resources/masterdata/SearchDocumentType/SearchDocumentType.yml
@@ -6,6 +6,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/SearchDocumentType/searchDocumentTypeResult
       input: '{
@@ -48,6 +49,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/SearchDocumentType/searchDocumentTypeResult
       input: '{
@@ -90,6 +92,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/SearchDocumentType/searchDocumentTypeResult
       input: '{
@@ -132,6 +135,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -170,6 +174,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -208,6 +213,7 @@ SearchDocumentType:
       checkErrorsOnlyInResponse: true
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/SearchDocumentType/searchDocumentTypeResult
       input: '{
@@ -241,6 +247,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -279,6 +286,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -317,6 +325,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -355,6 +364,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -393,6 +403,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -431,6 +442,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -469,6 +481,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -507,6 +520,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -544,6 +558,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -582,6 +597,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
@@ -619,6 +635,7 @@ SearchDocumentType:
       role: admin
       templateFields: ["value"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentType_01
       inputTemplate: masterdata/SearchDocumentType/searchDocumentType
       outputTemplate: masterdata/error
       input: '{
