--- a/api-test/src/main/resources/masterdata/DeviceSpecification/CreateDeviceSpecification.yml
+++ b/api-test/src/main/resources/masterdata/DeviceSpecification/CreateDeviceSpecification.yml
@@ -7,6 +7,7 @@ CreateDeviceSpecification:
       checkErrorsOnlyInResponse: true
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_03
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/DeviceSpecification/deviceSpecificationResult
       input: '{
@@ -31,6 +32,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_03
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -60,6 +62,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -89,6 +92,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -118,6 +122,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -147,6 +152,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -176,6 +182,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -205,6 +212,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -234,6 +242,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -263,6 +272,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -292,6 +302,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -321,6 +332,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -350,6 +362,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -379,6 +392,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -408,6 +422,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -437,6 +452,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -466,6 +482,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -495,6 +512,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -524,6 +542,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
@@ -553,6 +572,7 @@ CreateDeviceSpecification:
       role: admin
       templateFields: ["name","description"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceSpecification/deviceSpecification
       outputTemplate: masterdata/error
       input: '{
