--- a/api-test/src/main/resources/masterdata/DeviceTypeFilter/DeviceTypeFilter.yml
+++ b/api-test/src/main/resources/masterdata/DeviceTypeFilter/DeviceTypeFilter.yml
@@ -6,6 +6,7 @@ DeviceTypeFilter:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilter
       outputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilterResult
       input: '{
@@ -32,6 +33,7 @@ DeviceTypeFilter:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilter
       outputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilterResult
       input: '{
@@ -58,6 +60,7 @@ DeviceTypeFilter:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilter
       outputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilterResult
       input: '{
@@ -84,6 +87,7 @@ DeviceTypeFilter:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilter
       outputTemplate: masterdata/error
       input: '{
@@ -111,6 +115,7 @@ DeviceTypeFilter:
       checkErrorsOnlyInResponse: true
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilter
       outputTemplate: masterdata/NilFilterResult
       input: '{
@@ -132,6 +137,7 @@ DeviceTypeFilter:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilter
       outputTemplate: masterdata/error
       input: '{
@@ -157,6 +163,7 @@ DeviceTypeFilter:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilter
       outputTemplate: masterdata/error
       input: '{
@@ -183,6 +190,7 @@ DeviceTypeFilter:
       role: admin
       templateFields: ["languageCode"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDeviceType_01
       inputTemplate: masterdata/DeviceTypeFilter/deviceTypeFilter
       outputTemplate: masterdata/error
       input: '{
