--- a/api-test/src/main/resources/masterdata/DocumentCategory/UpdateDocumentCategory.yml
+++ b/api-test/src/main/resources/masterdata/DocumentCategory/UpdateDocumentCategory.yml
@@ -6,6 +6,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/DocumentCategory/documentCategoryResult
       input: '{
@@ -26,6 +27,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/DocumentCategory/documentCategoryResult
       input: '{
@@ -47,6 +49,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/error
       input: '{
@@ -72,6 +75,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/error
       input: '{
@@ -97,6 +101,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/error
       input: '{
@@ -122,6 +127,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/error
       input: '{
@@ -147,6 +153,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/error
       input: '{
@@ -172,6 +179,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/error
       input: '{
@@ -197,6 +205,7 @@ UpdateDocumentCategory:
       role: admin
       templateFields: ["name","description"]
       restMethod: put
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/DocumentCategory/documentCategory
       outputTemplate: masterdata/error
       input: '{
