--- a/api-test/src/main/resources/masterdata/FilterDocCategory/FilterDocCategory.yml
+++ b/api-test/src/main/resources/masterdata/FilterDocCategory/FilterDocCategory.yml
@@ -7,6 +7,7 @@ FilterDocCategory:
       checkErrorsOnlyInResponse: true
       templateFields: ["text"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/FilterDocCategory/filterDocCategory
       outputTemplate: masterdata/FilterDocCategory/filterDocCategoryResult
       input: '{
@@ -28,6 +29,7 @@ FilterDocCategory:
       checkErrorsOnlyInResponse: true
       templateFields: ["text"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/FilterDocCategory/filterDocCategory
       outputTemplate: masterdata/FilterDocCategory/filterDocCategoryResult
       input: '{
@@ -49,6 +51,7 @@ FilterDocCategory:
       role: admin
       templateFields: ["text"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/FilterDocCategory/filterDocCategory
       outputTemplate: masterdata/error
       input: '{
@@ -76,6 +79,7 @@ FilterDocCategory:
       role: admin
       templateFields: ["text"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/FilterDocCategory/filterDocCategory
       outputTemplate: masterdata/error
       input: '{
@@ -102,6 +106,7 @@ FilterDocCategory:
       role: admin
       templateFields: ["text"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/FilterDocCategory/filterDocCategory
       outputTemplate: masterdata/error
       input: '{
@@ -127,6 +132,7 @@ FilterDocCategory:
       role: admin
       templateFields: ["text"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/FilterDocCategory/filterDocCategory
       outputTemplate: masterdata/error
       input: '{
@@ -154,6 +160,7 @@ FilterDocCategory:
       checkErrorsOnlyInResponse: true
       templateFields: ["text"]
       restMethod: post
+      additionalDependencies: TC_Masterdata_CreateDocumentCategory_01
       inputTemplate: masterdata/FilterDocCategory/filterDocCategory
       outputTemplate: masterdata/FilterDocCategory/filterDocCategoryResult
       input: '{
