--- a/helm/admin-service/Chart.yaml
+++ b/helm/admin-service/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: admin-service
 description: A Helm chart for MOSIP Admin module
 type: application
-version: 12.1.4
+version: 12.1.4-develop
 appVersion: ""
 dependencies:
   - name: common
